# aichecker

./: .gitignore  .~lock.user_posts.csv#  Instagram-Check.docx  README.md  TODO  async_reader.py  bildbeschreibung.py  check_bsky_profile.py  detectora.py  ig_scraper.py  imagecheck.py  main.py  main_bsky.py  main_ig.py  main_tg.py  main_tt.py  pyproject.toml  read_posts.py  requirements.txt  tg_hr_check.py  user_posts.csv
src/: check_bsky.py
src/aichecker/: README-ig.md  README-tg.md  README-tt.md  __init__.py  aiornot.py  bildbeschreibung.py  check_bsky.py  check_ig.py  check_tg.py  check_tt.py  check_wrappers.py  detectora.py  evaluate.py  hydrate.py  imagecheck.py  je_aiornot.py  save_urls.py  tg_check.py  transcribe.py
tests/: test.py
