[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aichecker"
authors = [
  {name = "Jan Eggers", email = "jan.eggers@hr.de"},
]
maintainers = [
  {name = "Jan Eggers", email = "jan.eggers@hr.de"},
]
version = "0.2.4.3" # Neue Versionsnummern für pip-Update
description = "Bluesky- und Telegram-Konten auf KI-Inhalte checken"
requires-python = ">=3.8"
dependencies = [
    "requests", # Alle bsky-Calls über Requests
    "openai", # für die Bildbeschreibung
    "ollama", # für die Bildbeschreibung
    "openai-whisper", # für die Transkription
    "bs4", # Seitenanalyse
    "pydub", # Transkription/Audioformate
]
readme="README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "pytest",
]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = ["tests"]
